# ChangeLog for net-ftp/lftp
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-ftp/lftp/ChangeLog,v 1.158 2008/05/24 13:43:34 maekke Exp $

  24 May 2008; Markus Meier <maekke@gentoo.org> lftp-3.7.0.ebuild:
  amd64 stable, bug #222365

  18 May 2008; Raúl Porcel <armin76@gentoo.org> lftp-3.7.0.ebuild:
  ia64/sparc/x86 stable wrt #222365

  18 May 2008; Markus Rothe <corsair@gentoo.org> lftp-3.7.0.ebuild:
  Stable on ppc64; bug #222365

  17 May 2008; nixnut <nixnut@gentoo.org> lftp-3.7.0.ebuild:
  Stable on ppc wrt bug 222365

  12 May 2008; Jeroen Roovers <jer@gentoo.org> lftp-3.7.0.ebuild:
  Stable for HPPA.

*lftp-3.7.1 (12 May 2008)

  12 May 2008; Jeroen Roovers <jer@gentoo.org> +lftp-3.7.1.ebuild:
  Version bump.

*lftp-3.7.0 (01 Apr 2008)

  01 Apr 2008; Daniel Black <dragonheart@gentoo.org> +lftp-3.7.0.ebuild:
  version bump

  26 Feb 2008; Richard Freeman <rich0@gentoo.org> lftp-3.6.1-r1.ebuild:
  amd64 stable - 211111

  24 Feb 2008; Raúl Porcel <armin76@gentoo.org> lftp-3.6.1-r1.ebuild:
  alpha/ia64/sparc/x86 stable

  22 Feb 2008; Brent Baude <ranger@gentoo.org> lftp-3.6.1-r1.ebuild:
  stable ppc64, bug 211111

  22 Feb 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  lftp-3.6.1-r1.ebuild:
  ppc stable, bug #211111

  22 Feb 2008; Jeroen Roovers <jer@gentoo.org> lftp-3.6.1-r1.ebuild:
  Stable for HPPA (bug #211111).

*lftp-3.6.1-r1 (21 Jan 2008)

  21 Jan 2008; Raúl Porcel <armin76@gentoo.org>
  +files/3.6.1-segfault.patch, +files/3.6.1-specialchars.patch,
  +lftp-3.6.1-r1.ebuild:
  Add patches from upstream to fix #203570, #203729

  07 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org> lftp-3.5.14.ebuild:
  ppc stable, bug #198843

  06 Dec 2007; Steve Dibb <beandog@gentoo.org> lftp-3.5.14.ebuild:
  amd64 stable, bug 198843

  01 Dec 2007; Markus Rothe <corsair@gentoo.org> lftp-3.5.14.ebuild:
  Stable on ppc64

*lftp-3.6.1 (16 Nov 2007)
