@@ -1,0 +1,68 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/lftp/lftp-3.7.3.ebuild,v 1.1 2008/06/01 03:57:34 dragonheart Exp $
+
+EAPI="prefix"
+
+inherit eutils
+
+DESCRIPTION="A sophisticated ftp/sftp/http/https client and file transfer program"
+HOMEPAGE="http://lftp.yar.ru/"
+SRC_URI="http://ftp.yars.free.net/pub/source/lftp/${P}.tar.bz2"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x86-solaris"
+IUSE="ssl gnutls socks5 nls"
+
+RDEPEND=">=sys-libs/ncurses-5.1
+		socks5? (
+			>=net-proxy/dante-1.1.12
+			virtual/pam )
+		ssl? (
+			gnutls? ( >=net-libs/gnutls-1.2.3 )
+			!gnutls? ( >=dev-libs/openssl-0.9.6 )
+		)
+		virtual/libc
+		>=sys-libs/readline-5.1"
+
+DEPEND="${RDEPEND}
+	nls? ( sys-devel/gettext )
+	dev-lang/perl"
+
+#src_unpack() {
+#	unpack ${A}
+#	cd "${S}"
+#
+#	epatch "${FILESDIR}"/${PV}-segfault.patch
+#	epatch "${FILESDIR}"/${PV}-specialchars.patch
+#}
+
+src_compile() {
+	local myconf="$(use_enable nls) --enable-packager-mode"
+
+	if use ssl && use gnutls ; then
+		myconf="${myconf} --without-openssl"
+	elif use ssl && ! use gnutls ; then
+		myconf="${myconf} --without-gnutls --with-openssl=${EPREFIX}/usr"
+	else
+		myconf="${myconf} --without-gnutls --without-openssl"
+	fi
+
+	use socks5 && myconf="${myconf} --with-socksdante=${EPREFIX}/usr" \
+		|| myconf="${myconf} --without-socksdante"
+
+	econf \
+		--sysconfdir="${EPREFIX}"/etc/lftp \
+		--with-modules \
+		${myconf} || die "econf failed"
+
+	emake || die "compile problem"
+}
+
+src_install() {
+	emake install DESTDIR="${D}" || die
+
+	dodoc BUGS ChangeLog FAQ FEATURES MIRRORS \
+			NEWS README* THANKS TODO
+}
